codepkg/objects/Resource_Request_Question_Answer__c.object
<CustomObject>
    <fields>
        <fullName>Answer__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Answer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <referenceTo>Order__c</referenceTo>
        <relationshipLabel>Resource Request Questions &amp; Answers</relationshipLabel>
        <relationshipName>Resource_Request_Questions_Answers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Question</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rating_Score__c</fullName>
        <label>Rating Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Resource Request Question &amp; Answer</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>QA-{00000000}</displayFormat>
        <label>Resource Request Question &amp; Answer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resource Request Questions &amp; Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>